# grafana-rs

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  contract.yml
examples/: dashboard_get.rs  health.rs
src/: auth.rs  error.rs  lib.rs  request_options.rs  response.rs
src/api/: dashboards.rs  dashboards_blocking.rs  datasources.rs  datasources_blocking.rs  folders.rs  folders_blocking.rs  health.rs  health_blocking.rs  mod.rs  openapi.rs  openapi_blocking.rs  org.rs  org_blocking.rs  raw.rs  raw_blocking.rs  search.rs  search_blocking.rs  service_accounts.rs  service_accounts_blocking.rs  teams.rs  teams_blocking.rs  user.rs  user_blocking.rs
src/client/: async_client.rs  blocking_client.rs
src/transport/: async_transport.rs  blocking_transport.rs  mod.rs
src/types/: common.rs  dashboards.rs  datasources.rs  folders.rs  health.rs  mod.rs  openapi.rs  org.rs  search.rs  service_accounts.rs  teams.rs  user.rs
src/util/: mod.rs  redact.rs  url.rs
tests/: blocking.rs  contract.rs  sdk.rs
