[package]
name = "grafana"
version = "0.1.1"
edition = "2024"
rust-version = "1.92"
publish = false
readme = "README.md"
include = [
  "/Cargo.toml",
  "/README.md",
  "/LICENSE*",
  "/src/**",
]

[workspace]
resolver = "3"

[workspace.dependencies]
base64 = { version = "0.22.1", default-features = false, features = ["std"] }
fastrand = { version = "2.3.0", default-features = false, features = ["std"] }
http = { version = "1.4.0", default-features = false }
httpdate = { version = "1.0.3", default-features = false }
reqwest = { version = "0.13.1", default-features = false, features = ["json", "query"] }
rustls = { version = "0.23.35", default-features = false }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.148", default-features = false, features = ["std"] }
thiserror = { version = "2.0.17", default-features = false }
tokio = { version = "1.48.0", default-features = false, features = ["rt", "time"] }
tracing = { version = "0.1.44", default-features = false, features = ["std"] }
url = { version = "2.5.7", default-features = false, features = ["serde"] }

wiremock = { version = "0.6.5", default-features = false }

[features]
default = ["async", "rustls"]

# Core modes
async = ["dep:reqwest", "dep:tokio"]
blocking = ["dep:reqwest", "reqwest?/blocking"]

# Observability
tracing = ["dep:tracing"]

# TLS selection (reqwest)
rustls = ["reqwest?/rustls-no-provider", "dep:rustls"]
native-tls = ["reqwest?/native-tls"]

# Internal escape hatch to allow `--all-features` builds.
multi-tls = []

[dependencies]
fastrand = { workspace = true }
http = { workspace = true }
httpdate = { workspace = true }
reqwest = { workspace = true, optional = true }
rustls = { workspace = true, optional = true, features = ["ring"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
url = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
http = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
wiremock = { workspace = true }

[package.metadata.release]
tag-prefix = ""
tag-name = "{{prefix}}{{version}}"
pre-release-commit-message = "chore: release {{crate_name}} version {{version}}"
tag-message = "chore: release {{crate_name}} version {{version}}"
pre-release-hook = ["git", "cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}" ]
